--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CALL OF DUTY</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="utils.css">
   <link rel="stylesheet" href="media.css">
@@ -244,9 +245,9 @@
         </div>
       </div>
     </section>
-    <section id="section4" class="view-main--3 rounded-3xl">
+    <section id="section4" class="view-main--4 rounded-3xl">
       <div class="section4-wrapper">
-<!--         <h1 class="sub-text">Call of Duty: Black Ops 6 is the latest installment in the iconic Black Ops series, renowned for its intense,</h1>
+        <!--         <h1 class="sub-text">Call of Duty: Black Ops 6 is the latest installment in the iconic Black Ops series, renowned for its intense,</h1>
         <h1 class="sub-text">fast-paced action and gripping storyline. This game takes players deeper into covert operations with</h1>
         <h1 class="sub-text">cutting-edge weaponry, advanced tactical gameplay, and a narrative filled with twists and turns.</h1>
         <h1 class="sub-text">The multiplayer mode offers a variety of new maps, modes, and customization options, keeping the</h1>
@@ -254,11 +255,142 @@
         <h1 class="sub-text">expansive multiplayer arenas, Black Ops 6 promises an immersive experience that stays true to the</h1>
         <h1 class="sub-text">legacy</h1> -->
         <h1 class="sub-text">
-          Call of Duty: Black Ops 6 is the latest installment in the iconic Black Ops series, renowned for its intense, fast-paced action and gripping storyline. This game takes players deeper into covert operations with cutting-edge weaponry, advanced tactical gameplay, and a narrative filled with twists and turns. The multiplayer mode offers a variety of new maps, modes, and customization options, keeping the competitive spirit alive. Whether you're battling through the single-player campaign or diving into the expansive multiplayer arenas, Black Ops 6 promises an immersive experience that stays true to the legacy of the franchise while pushing the boundaries of what fans can expect.
+          Call of Duty: Black Ops6 is the latest installment in the iconic Black Ops series, renowned for its intense,
+          fast-paced action and gripping storyline. This game takes players deeper into covert operations with
+          cutting-edge weaponry, advanced tactical gameplay, and a narrative filled with twists and turns. The
+          multiplayer mode offers a variety of new maps, modes, and customization options, keeping the competitive
+          spirit alive. Whether you're battling through the single-player campaign or diving into the expansive
+          multiplayer arenas, Black Ops 6 promises an immersive experience that stays true to the legacy of the
+          franchise while pushing the boundaries of what fans can expect.
         </h1>
       </div>
     </section>
+    <section id="section5" class="view-main--5 rounded-3xl">
+      <div class="section5-wrapper">
+        <div class="s5-title-con">
+          <h1 class="title-showdown">Showdown</h1>
+        </div>
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="mc--container" id="mc--container-1">
+                <div class="tipi-cod">OPS6</div>
+                <div class="mc--child-1-top">
+                  <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 1200 571.7" width="800" height="430.7">
+                    <path fill="none" stroke="e00606" stroke-width="5"
+                      d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    <image xlink:href="./assets/img/CERBERUS_KA.webp" x="0"
+                      y="0" width="1200" height="571.7" preserveAspectRatio="xMidYMid slice"
+                      clip-path="url(#clipPath)" class="slider-image--banner" />
+                    <clipPath id="clipPath">
+                      <path
+                        d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    </clipPath>
+                  </svg>
+                </div>
+                <div class="mc--child-2-bottom">
+                  <span class="mc--spn" id="mc--para-1">BLACK OPS6 - VIPER</span>
+                  <p class="mc--para" id="mc--spn-1">Viper, a master of deception, uses decoys and smoke grenades to outmaneuver opponents, perfect for confusing and ambushing enemies.</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="mc--container" id="mc--container-1">
+                <div class="tipi-cod">OPS6</div>
+                <div class="mc--child-1-top">
+                  <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 571.7" width="800" height="430.7">
+                    <path fill="none" stroke="e00606" stroke-width="5" d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    <image xlink:href="./assets/img/bo6-wpn-1.jpg" x="0" y="0" width="1200" height="571.7" preserveAspectRatio="xMidYMid slice" clip-path="url(#clipPath)" class="slider-image--banner"/>
+                    <clipPath id="clipPath">
+                      <path d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    </clipPath>
+                  </svg>
+                </div>
+                <div class="mc--child-2-bottom">
+                  <span class="mc--spn" id="mc--para-1">BLACK OPS6 - SCA-H</span>
+                  <p class="mc--para" id="mc--spn-1">This dominates mid-range combat, offering unparalleled firepower with high recoil control, perfect for versatile assault gameplay</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="mc--container" id="mc--container-1">
+                <div class="tipi-cod">OPS6</div>
+                <div class="mc--child-1-top">
+                  <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 571.7" width="800" height="430.7">
+                    <path fill="none" stroke="e00606" stroke-width="5" d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    <image xlink:href="./assets/img/bo6-chr--bnr-2.webp" x="0" y="0" width="1200" height="571.7" preserveAspectRatio="xMidYMid slice" clip-path="url(#clipPath)" class="slider-image--banner"/>
+                    <clipPath id="clipPath">
+                      <path d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    </clipPath>
+                  </svg>
+                </div>
+                <div class="mc--child-2-bottom">
+                  <span class="mc--spn" id="mc--para-1">BLACK OPS6 - RAVEN</span>
+                  <p class="mc--para" id="mc--spn-1">Raven, a stealth operative, excels in silent takedowns, using advanced camouflage and precision, ideal for covert operations.</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="mc--container" id="mc--container-1">
+                <div class="tipi-cod">OPS6</div>
+                <div class="mc--child-1-top">
+                  <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 571.7" width="800" height="430.7">
+                    <path fill="none" stroke="e00606" stroke-width="5" d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    <image xlink:href="./assets/img/bo6-wpn-2.png" x="0" y="0" width="1200" height="571.7" preserveAspectRatio="xMidYMid slice" clip-path="url(#clipPath)" class="slider-image--banner"/>
+                    <clipPath id="clipPath">
+                      <path d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    </clipPath>
+                  </svg>
+                </div>
+                <div class="mc--child-2-bottom">
+                  <span class="mc--spn" id="mc--para-1">BLACK OPS6 - M13B</span>
+                  <p class="mc--para" id="mc--spn-1">Some provide devastating close-range damage, perfect for clearing rooms and dominating tight quarters in fast-paced battles.</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="mc--container" id="mc--container-1">
+                <div class="tipi-cod">OPS6</div>
+                <div class="mc--child-1-top">
+                  <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 571.7" width="800" height="430.7">
+                    <path fill="none" stroke="e00606" stroke-width="5" d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    <image xlink:href="./assets/img/bo6-chr--bnr-1.jpeg" x="0" y="0" width="1200" height="571.7" preserveAspectRatio="xMidYMid slice" clip-path="url(#clipPath)" class="slider-image--banner"/>
+                    <clipPath id="clipPath">
+                      <path d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    </clipPath>
+                  </svg>
+                </div>
+                <div class="mc--child-2-bottom">
+                  <span class="mc--spn" id="mc--para-1">BLACK OPS6 - BLAZE</span>
+                  <p class="mc--para" id="mc--spn-1">Blaze, the explosive expert, uses C4 and grenades to cause chaos, specializing in area denial and trap-based strategies.</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="mc--container" id="mc--container-1">
+                <div class="tipi-cod">OPS6</div>
+                <div class="mc--child-1-top">
+                  <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 571.7" width="800" height="430.7">
+                    <path fill="none" stroke="e00606" stroke-width="5" d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    <image xlink:href="./assets/img/bo6-wpn-3.jpg" x="0" y="0" width="1200" height="571.7" preserveAspectRatio="xMidYMid slice" clip-path="url(#clipPath)" class="slider-image--banner"/>
+                    <clipPath id="clipPath">
+                      <path d="M1140 30.8c28.3 0 42.4 0 51.2 8.8 8.8 8.8 8.8 23 8.8 51.3v338.6c0 28.4 0 42.5-8.8 51.3-8.8 8.8-22.9 8.8-51.2 8.8h-66.4c-10.1 0-15.1 0-19.2 1.2-9.8 2.9-17.5 10.6-20.4 20.4-1.2 4.1-1.2 9.2-1.2 19.3s0 15.2-1.2 19.3c-2.9 9.9-10.6 17.6-20.4 20.4-4.1 1.2-9.2 1.2-19.3 1.2H60c-28.3 0-42.4 0-51.2-8.8C0 554 0 539.9 0 511.5V60.2C0 31.8 0 17.6 8.8 8.8 17.6 0 31.7 0 60 0h417.1c10.7 0 16.1 0 21 1.8.5.2 1 .4 1.6.6 4.8 2 8.8 5.7 16.6 13 7.9 7.3 11.8 11 16.6 13 .5.2 1 .4 1.6.6 4.9 1.8 10.3 1.8 21 1.8H1140z" />
+                    </clipPath>
+                  </svg>
+                </div>
+                <div class="mc--child-2-bottom">
+                  <span class="mc--spn" id="mc--para-1">BLACK OPS6 - M4A1</span>
+                  <p class="mc--para" id="mc--spn-1">Raven, a stealth operative, excels in silent takedowns, using advanced camouflage and precision, ideal for covert operations.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/17.9.0/lazyload.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/jsm/loaders/FontLoader.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/jsm/geometries/TextGeometry.min.js"></script>
@@ -269,7 +401,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
     integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/17.9.0/lazyload.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
 
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/loaders/SVGLoader.js"></script> -->
   <script src="script.js"></script>
